# PyRenew

./: .gitignore  .pre-commit-config.yaml  .pre-commit-rst-placeholder.sh  Dockerfile  Makefile  README.md  _typos.toml  codecov.yml  concentration_exploration.py  demo_hosp_only_ww_model.py  equations.md  mkdocs.yml  panache.toml  pyproject.toml  pyproject.toml~HEAD  quarto_python_formatter.py
docs/: .pages  Makefile  README.md  developer_documentation.md  index.md  post_process_rst.py  pyproject.toml
docs/reference/: additional.md  arrayutils.md  convolve.md  datasets.md  deterministic.md  distributions.md  distutil.md  index.md  latent.md  math.md  metaclass.md  model.md  observation.md  process.md  randomvariable.md  regression.md  time.md  transformation.md
docs/source/: conf.py  ctoc.rst  developer_documentation.md  developer_documentation.rst  index.md  index.rst  random_variable_design.rst  state.rst  usage.rst
docs/source/_static/: msei.css
docs/source/general/: bugs.rst  contribute.rst  ctoc.md  ctoc.rst  faq.rst  glossary.rst  license.rst  notices.rst  usage.rst
docs/source/msei_reference/: basic.rst  datasets.md  datasets.rst  distributions.rst  distutil.rst  index.md  index.rst  latent.rst  model.md  model.rst  msei.rst  observation.rst  process.rst  randomvariable.rst  transform.rst
docs/source/pyrenew_reference/: additional.md  deterministic.md  index.md  observation.md  process.md  randomvariable.md
docs/source/test_reference/: index.rst  test_leslie_matrix.rst  test_logistic_susceptibility_adjustment.rst  test_random_walk.rst  test_transforms.rst
docs/source/tutorials/: .gitignore  Makefile  basic_renewal_model.md  basic_renewal_model.qmd  basic_renewal_model.rst  day_of_the_week.md  day_of_the_week.qmd  day_of_the_week.rst  example-with-datasets.rst  example_with_datasets.qmd  example_with_datasets.rst  extending_pyrenew.md  extending_pyrenew.qmd  extending_pyrenew.rst  getting-started.rst  getting_started.md  getting_started.qmd  getting_started.rst  hosp_only_ww_model.qmd  hosp_only_ww_model.rst  hospital_admissions_model.md  hospital_admissions_model.qmd  hospital_admissions_model.rst  index.md  index.rst  periodic_effects.md  periodic_effects.qmd  periodic_effects.rst  porting-epidemia.rst  porting_epidemia.qmd  porting_epidemia.rst  pyrenew_demo.qmd  pyrenew_demo.rst  references.bib  time.qmd  time.rst
docs/stylesheets/: extra.css
docs/tutorials/: .gitignore  .pages  _quarto.yml  _tutorial_theme.py  ascertainment.qmd  basic_renewal_model.md  basic_renewal_model.qmd  building_multisignal_models.qmd  custom_randomvariables.qmd  day_of_the_week.md  day_of_the_week.qmd  day_of_week_effects.qmd  extending_pyrenew.md  extending_pyrenew.qmd  getting_started.md  getting_started.qmd  hospital_admissions_model.md  hospital_admissions_model.qmd  index.md  latent_hierarchical_infections.qmd  latent_infections.qmd  latent_subpopulation_infections.qmd  model_builder_helper.qmd  multisignal_H_E_model.qmd  multisignal_hosp_ed_workflow.qmd  observation_processes_counts.qmd  observation_processes_measurements.qmd  periodic_effects.md  periodic_effects.qmd  random_variables.qmd  right_truncation.qmd
docs/tutorials/data/multisignal_he/: README.md  custom_he_fit_artifacts.npz  custom_he_scalar_draws.csv  linked_pyrenew_fit_artifacts.npz  metadata.json  pyrenew_fit_artifacts.npz  timings.json
model/: .gitignore  Dockerfile  Makefile  README.md  demo_hosp_only_ww_model.py  equations.md  improving_hosp_only_notes.md  pyproject.toml
model/docs/: .gitignore  README.md  basic_renewal_model.qmd  example-with-datasets.md  example-with-datasets.qmd  example_with_datasets.qmd  extending-pyrenew.qmd  extending_pyrenew.qmd  getting-started.ipynb  getting-started.md  getting-started.qmd  getting_started.qmd  hospital_admissions_model.qmd  periodic_effects.qmd  porting-epidemia.qmd  pyrenew_demo.ipynb  pyrenew_demo.md  pyrenew_demo.qmd  time.qmd
model/src/pyrenew/: arrayutils.py  basic.py  convolve.py  datautils.py  distutil.py  math.py  mcmcutils.py  metaclass.py  metaclasses.py  observation.py  process.py  regression.py  transform.py
model/src/pyrenew/datasets/: __init__.py  example_df.R  generation_interval.R  generation_interval.py  infection_admission_interval.R  infection_admission_interval.py  infection_admission_interval.tsv  wastewater.py  wastewater.tsv
model/src/pyrenew/deterministic/: __init__.py  deterministic.py  deterministicpmf.py  nullrv.py  pmf.py  process.py
model/src/pyrenew/latent/: __init__.py  hospitaladmissions.py  hospitalizations.py  i0.py  infection_functions.py  infection_initialization_method.py  infection_initialization_process.py  infection_seeding_method.py  infection_seeding_process.py  infections.py  infectionsrtfeedback.py  (+1 more)
model/src/test/: __init__.py  test_ar_process.py  test_arandom_key.py  test_arrayutils.py  test_assert_sample_and_rtype.py  test_assert_type.py  test_broadcaster.py  test_convolve_scanners.py  test_datasets.py  test_datautils.py  test_deterministic.py  test_differenced_process.py  test_distributional_rv.py  test_first_difference_ar.py  test_forecast.py  test_iid_random_sequence.py  test_infection_functions.py  test_infection_initialization_method.py  test_infection_initialization_process.py  test_infection_seeding_method.py  test_infection_seeding_process.py  test_infectionsrtfeedback.py  test_latent_admissions.py  test_latent_hospitalizations.py  test_latent_infections.py  test_leslie_matrix.py  test_logistic_susceptibility_adjustment.py  test_model_basic_renewal.py  test_model_hosp_admissions.py  test_model_hospitalizations.py  test_observation_hospitalizations.py  test_observation_infections.py  test_observation_negativebinom.py  test_observation_poisson.py  test_periodiceffect.py  test_predictive.py  test_process_asymptotics.py  test_random_key.py  test_random_walk.py  test_regression.py  (+6 more)
pipeline/: Makefile  README.md  pyproject.toml  somemodel.json  somepostprod.json
pipeline/pipeline/: main.py  placeholder.py  submit_main.py
pipeline/tests/: test_placeholder.py  test_submit_main.py
(+383 files in other folders)
