[tool.poetry]
name = "PyRenew"
version = "0.1.0"
description = "PyRenew, a Python package for multi-signal Bayesian renewal modeling with JAX and NumPyro."
authors = ["CFA"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    {include = "pyrenew"},
]
include = [{path = "datasets/*.tsv"}]
exclude = [{path = "datasets/*.rds"}]

[tool.poetry.dependencies]
python = "^3.12"
numpyro = ">=0.15.1"
jax = ">=0.4.30"
numpy = "^2.0.0"
polars = "^1.2.1"
matplotlib = "^3.8.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
nbconvert = "^7.16.4"
deptry = "^0.17.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
ipykernel = "^6.29.3"
pyyaml = "^6.0.0"
nbclient = "^0.10.0"
nbformat = "^5.10.0"
numpydoc = "^1.7.0"
arviz = "^0.19.0"
sphinx = "^7.2.6"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-autodoc-typehints = "^2.1.0"
sphinx-book-theme = "^1.1.2"
ipywidgets = "^8.1.3"
jupyter = "^1.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mpl = "^0.17.0"
scipy = "^1.14.1"

[tool.numpydoc_validation]
checks = [
    "GL03",
    "GL08",
    "SS01",
    "PR03",
    "PR04",
    "PR07",
    "RT01"
]
ignore = [
    "ES01",
    "SA01",
    "EX01",
    "SS06",
    "RT05"
]
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
    '\.__call__$'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.deptry]
known_first_party = ["pyrenew", "test"]

[tool.deptry.per_rule_ignores]
DEP004 = ["pytest", "scipy"]
