[project]
name = "PyRenew"
version = "0.1.4"
description = "PyRenew, a Python package for multi-signal Bayesian renewal modeling with JAX and NumPyro."
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "CFA"}]
requires-python = ">= 3.13"
dependencies = [
    "jax>=0.7.0",
    "numpy>=2.0.0",
    "polars>=1.2.1",
    "numpyro>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "nbconvert>=7.16.4",
    "deptry>=0.17.0",
    "ipykernel>=6.29.5"
]
docs = [
    "matplotlib>=3.8.3",
    "ipykernel>=6.29.3",
    "pyyaml>=6.0.0",
    "nbclient>=0.10.0",
    "nbformat>=5.10.0",
    "numpydoc>=1.7.0",
    "arviz>=0.19.0",
    "sphinx>=7.2.6",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinx-autodoc-typehints>=2.1.0",
    "sphinx-book-theme>=1.1.2",
    "ipywidgets>=8.1.3",
    "jupyter>=1.0.0",
    "myst-parser>=4.0.0",
    "sphinxcontrib-katex>=0.9.10"
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mpl>=0.17.0",
    "scipy>=1.14.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
include = ["datasets/*.tsv"]
exclude = ["datasets/*.rds"]

[tool.hatch.build.targets.wheel]
packages = ["pyrenew"]

[tool.numpydoc_validation]
checks = [
    "GL03",
    "GL08",
    "SS01",
    "PR03",
    "PR04",
    "PR07",
    "RT01"
]
ignore = [
    "ES01",
    "SA01",
    "EX01",
    "SS06",
    "RT05"
]
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
    '\.__call__$'
]


[tool.deptry]
known_first_party = ["pyrenew", "test"]
pep621_dev_dependency_groups = ["dev", "test", "docs"]

[tool.deptry.per_rule_ignores]
DEP004 = ["pytest", "scipy"]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F"]
