[project]
name = "PyRenew"
version = "0.1.4"
description = "PyRenew, a Python package for multi-signal Bayesian renewal modeling with JAX and NumPyro."
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "CFA"}]
requires-python = ">= 3.13"
dependencies = [
    "jax>=0.7.0",
    "numpy>=2.0.0",
    "polars>=1.2.1",
    "numpyro>=0.19.0",
]

[dependency-groups]
dev = [
    "arviz>=0.22.0",
    "beautifulsoup4>=4.13.5",
    "deptry>=0.23.1",
    "ipykernel>=6.30.1",
    "markdown-callouts>=0.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.18.2",
    "nbconvert>=7.16.6",
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "pytest-mpl>=0.17.0",
    "ruff>=0.13.0",
    "scipy>=1.16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
include = ["datasets/*.tsv"]
exclude = ["datasets/*.rds"]

[tool.hatch.build.targets.wheel]
packages = ["pyrenew"]

[tool.numpydoc_validation]
checks = [
    "GL03",
    "GL08",
    "SS01",
    "PR03",
    "PR04",
    "PR07",
    "RT01"
]
ignore = [
    "ES01",
    "SA01",
    "EX01",
    "SS06",
    "RT05"
]
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
    '\.__call__$'
]


[tool.deptry]
known_first_party = ["pyrenew", "test"]
pep621_dev_dependency_groups = ["dev", "test", "docs"]

[tool.deptry.per_rule_ignores]
DEP004 = ["pytest", "scipy", "beautifulsoup4"]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F"]
