[tool.poetry]
name = "docs"
version = "0.1.0"
description = "This package contains the documentation for the CFA Multisignal Renewal project. This documentation leverages Sphinx."
authors = ["R543hfer099JJfd <127630341+AFg6K7h4fhy2@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^7.2.6"
jax = "^0.4.25"
jaxlib = "^0.4.25"
numpyro = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
