[tool.poetry]
name = "docs"
version = "0.1.0"
description = "This package contains the documentation for the CFA Multisignal Renewal project. This documentation leverages Sphinx."
authors = ["R543hfer099JJfd <127630341+AFg6K7h4fhy2@users.noreply.github.com>"]
license = "Apache 2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^7.2.6"
jax = "^0.4.25"
jaxlib = "^0.4.25"
numpyro = "^0.15.0"
sphinxcontrib-mermaid = "^0.9.2"
polars = "^0.20.16"
matplotlib = "^3.8.3"
sphinx-autodoc-typehints = "^2.1.0"
sphinx-book-theme = "^1.1.2"

[tool.numpydoc_validation]
checks = [
    "EX01",
]
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
    '\.__init__$',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
