[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = "pipeline: a package for running models in Azure Batch"
authors = ["Nathan McIntosh <ute2@cdc.gov>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cfa-azure = {git = "https://github.com/cdcgov/cfa_azure", tag = "v0.1.0"}


[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
